<resources>
    <string name="app_name">OpenSSME</string>
    <string name="action_settings">Settings</string>



    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>

    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>

    <!--<string name="google_api_key">google_api_key</string>-->
    <!--<string name="facebook_app_id">facebook_app_id</string>-->
    <!--<string name="server_client_id">server_client_id</string>-->



    <string name="main">Main</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_maps">Map</string>
    <string name="request_call"> Call permission is necessary, Without this permission the app is unable to work properly</string>
    <string name="request_location"> Location permission is necessary, Without this permission the app is unable to work properly</string>
    <string name="request_contacts"> Read contacts permission is necessary, Without this permission the app is unable to work properly</string>
    <string name="request_read_write"> Read Write from external storage permission is necessary, Without this permission the app is unable to work properly</string>


    <string name="subject">OpenSSME!</string>
    <string name="body"> Just Opened My Gate With This Cool App</string>
    <string name="url">https://play.google.com/store/apps/details?id=com.open.ssme</string>

    <!-- LogInActivity-->
    <string name="permission_denied">Permission Denied</string>
    <string name="re_try">RE-TRY</string>
    <string name="please_fix">Please fix Permissions manually</string>
    <string name="go_settings">Go to settings</string>

    <string name="location_denied">OpenSSME requires location</string>
    <string name="location_fix">visit your device settings and turn on location to High accuracy mode.</string>



    <!-- MainActivity  -->
    <string name="add_gate">Add Gate</string>
    <string name="settings">Settings</string>
    <string name="my_gates">My Gates</string>
    <string name="shut_down">Shut Down</string>
    <string name="error_info">Google Api Not Found, Shutting Down.</string>
    <string name="do_shut_down">Do you want to shut down OpenSSME?</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
    <string name="do_log_out">Do you want to log out</string>


    <!-- GateFragment  -->
    <string name="delete">Remove Gate</string>
    <string name="do_delete">Do you want to remove</string>
    <string name="remove">Remove</string>


    <!-- MAPFragment  -->
    <string name="map_error">Error on map</string>
    <string name="phone_invalid">Phone number invalid</string>
    <string name="phone_exist">Phone number exist</string>
    <string name="no_phone">Contact has no phone number</string>
    <string name="click_to_add">Click To Select Contact</string>


    <!-- OpenSSMEService  -->
    <string name="running">Running. Tap to open.</string>
    <string name="call">CALL </string>
    <string name="switch_off">SWITCH OFF</string>
    <string name="higher_ver">You need a higher version</string>


    <string name="no_gates">No Gates</string>

    <!-- Settings  -->
    <string name="gps_distance_title">GPS Activation Distance</string>
    <string name="gps_distance_summary">distance to start the GPS tracking</string>

    <string name="open_distance_title">Open Gate Distance</string>
    <string name="open_distance_summary">distance to make the phone call</string>

    <string name="screen_title">Screen On</string>
    <string name="screen_summary">keep the screen on</string>

    <string name="map_type_title">Map Types</string>
    <string name="map_type_summary">types of map to display</string>

    <string name="terminate_title">Terminate</string>
    <string name="terminate_summary">close the application after calling gate</string>

    <string name="social_title">Social</string>
    <string name="social_summary">receive sms from contacts with message body "OpenSSME" to open the closest gate</string>

    <string name="sound_title">Notification Sound</string>
    <string name="sound_summary">alert sound when calling gate</string>

    <string name="wifi_title">Wifi Mode</string>
    <string name="wifi_summary">turn off all services when wifi connected</string>

    <string name="clock_start">Start Time</string>
    <string name="clock_end">End Time</string>

    <string name="schedule_title">Schedule</string>
    <string name="schedule_time_title">Select Time</string>
    <string name="schedule_summary">turn on service in specific hours</string>

    <string name="no_gates_settings">please add at least one gate</string>

    <string name="start">Start</string>
    <string name="end">End</string>

    <string name="schedule">Schedule</string>

</resources>
