<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/gate_list"
            android:checked="false"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/my_gates" />

        <item
            android:id="@+id/menu_map"
            android:checked="false"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/add_gate" />

        <item
            android:id="@+id/share"
            android:checked="false"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/share" />

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/logout"
            android:checked="false"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out" />



    </group>
</menu>